# road-gen-ai

./: .env.example  .gitignore  check_env.py  main.py  pyproject.toml  requirements.txt  verify_lib.py
app/: results_viewer.py
app/templates/: base.html  index.html  run.html  temperature.html
experiments/hybrid_generator/: hybrid_generator_pilot.md
experiments/prompt_optimization/: prompt_optimization_report.md
experiments/temperature_sweep/: temperature_sweep_report.md
experiments/temperature_sweep/claude/: summary.json  temp_0.50.json  temp_0.70.json  (+3 more)
prompts/: diversity_section.txt  system_prompt.txt  system_prompt_claude.txt  system_prompt_gemini.txt  system_prompt_gpt5.txt  user_prompt_template.txt
scripts/: optimize_prompts.py  temperature_sweep.py
src/: analyze_diversity.py  analyze_similarity.py  evaluate_llms.py  generate_roads.py  json_to_xodr.py  main.py  run_evaluation.py
src/code_builder/: script_manager.py
src/esmini/: version.txt
src/generators/: __init__.py  base_generator.py  component_library.py  diversity_driven_generator.py  hybrid_generator.py  least_generated.py  llm_generator.py  network_storage.py  random_generator.py  spatial_validator.py  usage_tracker.py  validated_generator.py
src/llm_engine/: client.py  prompts.py
src/metrics/: __init__.py  evaluation.py  plotting.py  similarity.py
src/rag_and_function_calling/: README.md
src/road_components/: definitions.py  generator.py  helpers.py  sample.json
src/utils/: collection.py  embedding.py  qdrant.py  query.py
src/validator/: checker.py
tests/: test_similarity.py
(+68 files in other folders)
